@@ -40,7 +40,7 @@ namespace dmcs {
    * @brief Base class for sending and receiving models and conflicts
    * within a dmcsd.
    */
-  template <typename MODEL, typename DECISIONLEVEL, typename CONFLICT>
+  template <typename MODEL, typename DECISIONLEVEL, typename CONFLICT, typename MESSAGE>
   class MessagingGateway
   {
   public:
@@ -89,6 +89,8 @@ namespace dmcs {
       std::size_t peq_cnt;
     };
 
+    virtual bool
+    sendIncomingMessage(MESSAGE* m, std::size_t from, std::size_t to, std::size_t prio, int msecs = 0) = 0;
 
     /** 
      * Send @a m w.r.t. @a sid originating from @a from to @a to with priority @a prio. May block.
@@ -153,6 +155,9 @@ namespace dmcs {
      */
     virtual bool
     sendJoinIn(std::size_t k, std::size_t from, std::size_t to, std::size_t prio, int msecs = 0) = 0;
+
+    virtual MESSAGE*
+    recvIncomingMessage(std::size_t from, std::size_t& prio, int& msecs) = 0;
 
     /** 
      * Receive a ModelSession message from @a from. May block.
