@@ -1,3 +1,12 @@
+2011-03-23  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* include/network/ConcurrentMessageDispatcher.h: Add send/recv
+	methods for incoming messages from Handler to Joiner.
+	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
+	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
+	* include/network/MessagingGateway.h: Likewise.
+	* include/network/ConcurrentMessageQueueFactory.h: Likewise.
+
 2011-03-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* src/network/JoinThread.cpp: Clean up.
